Fix with report